feat: delete potential user if not confirmed in 5min
