# src/controller/User/index.ts
@@ -1,9 +1,14 @@
 import { Request, Response } from 'express'
 
+import jwt from 'jsonwebtoken'
+
+import moment from 'moment'
+
 import { randomBytes } from 'crypto'
 
 import { User } from '@/models/User'
 import { UserI } from '@/types/interfaces'
+import * as crypt from '@/utils/crypt'
 import { sendMail } from '@/utils/sendMail'
 
 interface PotentialUser {
@@ -16,31 +21,70 @@ interface PotentialUser {
 let potentialUsers: PotentialUser[] = []
 
 export const createUser = async (req: Request, res: Response) => {
-  if (!req.body) return res.status(400).json({ msg: 'No body sent' })
+  if (!req.body) throw new Error('Body is empty')
   const userData: { name: string; email: string; hash: string } = req.body
   const result = await User.create(userData)
-  res.status(200).json({ result })
+  res.status(200).json({ message: 'User created', type: 'success', payload: result })
 }
 
 export const getUsers = async (req: Request, res: Response) => {
   const users = await User.find()
-  res.status(200).json({ users })
+  res.status(200).json({ message: 'Users received', type: 'success', payload: users })
 }
 
 export const register = async (req: Request, res: Response) => {
   const { name, email, pass } = req.body
-  if (!name || !email || !pass) throw new Error('Invalid credentials') //  not res to log for dev mode
+  if (!name || !email || !pass) throw new Error('Invalid credentials: name & email & pass needed') //  not res to log for dev mode
   const alreadyPotential = potentialUsers.find((u) => u.email == email)
   if (alreadyPotential)
-    return res.status(202).json({ message: 'Check your email or look for confirm letter' })
+    return res
+      .status(202)
+      .json({ message: 'Check your email or look for confirm letter', type: 'success' })
   const existing = await User.findOne({ $or: [{ name: name }, { email: email }] })
   if (existing) {
-    return res.status(409).json({ message: 'User with such name or email already exists' })
+    return res
+      .status(409)
+      .json({ message: 'User with such name or email already exists', type: 'warning' })
   }
   const hash = randomBytes(32).toString('hex')
   potentialUsers.push({ name, email, pass, hash })
+  setTimeout(() => {
+    potentialUsers = potentialUsers.filter((u) => u.hash !== hash)
+  }, 1000 * 60 * 5) // delete after 5 min
   sendMail(hash, email)
-  res.json({ message: 'Confirm user via email' })
+  res.json({
+    message: 'Confirm user via email',
+    type: 'success',
+    payload: 'Confirmation was sent on ' + email,
+  })
+}
+
+export const login = async (req: Request, res: Response) => {
+  const { login, pass } = req.body
+  if (!login || !pass)
+    return res
+      .status(401)
+      .json({ message: 'Invalid Credentials: login & pass needed', type: 'warning' })
+  const user = await User.findOne({ $or: [{ name: login }, { email: login }] })
+  if (!user) {
+    return res.status(404).json({ message: 'No user with such credentials', type: 'warning' })
+  }
+  const success = await crypt.compare(pass, user.pass)
+  if (!success)
+    return res.status(401).json({ message: 'Credentials: invalid login or pass', type: 'error' })
+  const expires = moment().add(2, 'days').valueOf()
+  const token = jwt.sign(
+    {
+      id: user._id,
+      exp: expires,
+    },
+    req.app.settings.jwtTokenSecret,
+  )
+  res.json({
+    message: 'user confirmed',
+    payload: { token, expires: moment(expires) },
+    type: 'success',
+  })
 }
 
 export const confirmEmail = async (req: Request, res: Response) => {
@@ -49,7 +93,20 @@ export const confirmEmail = async (req: Request, res: Response) => {
   if (potential) {
     potentialUsers = potentialUsers.filter((u) => u.hash !== hash)
     const userData: UserI = potential
-    await User.create(userData)
-    res.json({ msg: 'user confirmed', token: 'generatedtoken' })
-  } else res.json({ msg: 'no such user in potential' })
+    userData.pass = await crypt.hash(userData.pass)
+    const user = await User.create(userData)
+    const expires = moment().add(2, 'days').valueOf()
+    const token = jwt.sign(
+      {
+        id: user._id,
+        exp: expires,
+      },
+      req.app.settings.jwtTokenSecret,
+    )
+    res.json({
+      message: 'user confirmed',
+      payload: { token, expires: moment(expires) },
+      type: 'success',
+    })
+  } else res.status(404).json({ message: 'Account already confirmed', type: 'error' })
 }
