# src/routes/User/index.ts
@@ -4,12 +4,14 @@ import { catchAsync } from './../../utils/catchAsync'
 
 import * as userController from '../../controller/User/index'
 
+import { authorize } from '@/middlewares/authorize'
+
 export const usersRouter = Router()
 
-usersRouter.get('/', catchAsync(userController.getUsers))
-
-//usersRouter.post('/', userController.createUser)
+usersRouter.get('/', authorize, catchAsync(userController.getUsers))
 
 usersRouter.post('/register', catchAsync(userController.register))
+
+usersRouter.post('/login', catchAsync(userController.login))
 
 usersRouter.get('/confirm/:hash', catchAsync(userController.confirmEmail))
